--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "ReactTs",
-  "version": "0.0.1",
-  "description": "React to TS adapter",
-  "author": "",
-  "license": "BSD"
+	"name": "reactts",
+	"version": "0.1.0",
+	"author": "4dinterface",
+	"description": "adapter",
+	"dependencies": {
+	},
+	"devDependencies": {
+	},
+	"repository": {
+		"type": "git",
+		"url": "git@github.com:margai/ReactTS.git"
+	},
+	"licenses": [
+		{
+			"type": "MIT",
+			"url": "http://www.opensource.org/licenses/mit-license.php"
+		}
+	]
 }
